2009-10-29  Adam Barth  <abarth@webkit.org>

        Reviewed by Dimitri Glazkov.

        [V8] Out-of-memory crash in isolated worlds
        https://bugs.webkit.org/show_bug.cgi?id=30906

        We need to handle the fact that creating a V8:Context might fail.  I
        don't know how to test this change because creating a context usually
        only fails when V8 decides it's using too much memory.

        * bindings/v8/V8IsolatedWorld.cpp:
        (WebCore::V8IsolatedWorld::V8IsolatedWorld):
        * bindings/v8/V8Proxy.cpp:
        (WebCore::V8Proxy::evaluateInIsolatedWorld):
        (WebCore::V8Proxy::evaluateInNewContext):

2009-10-29  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Xan Lopez.

        Remove build warning introduced by r50284.

        * platform/graphics/gtk/MediaPlayerPrivateGStreamer.cpp:
        (WebCore::MediaPlayerPrivate::duration):

2009-10-29  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Adam Barth.

        [V8] Remove random crashes by removing retrieval of V8 context during garbage collection.

        https://bugs.webkit.org/show_bug.cgi?id=30919

        Unfortunately, I haven't been able to trigger this crash explicitly, so no test :(.

        * bindings/v8/V8DOMWrapper.cpp:
        (WebCore::V8DOMWrapper::jsWrapperForDOMObject): Added new "assume-it's-there" getter.
        * bindings/v8/V8DOMWrapper.h: Added getter decl.
        * bindings/v8/V8GCController.cpp:
        (WebCore::GCPrologueVisitor::visitDOMWrapper): Changed to use explicit getter.

2009-10-29  Dimitri Glazkov  <dglazkov@chromium.org>

        Unreviewed, build fix.

        [Chromium] Adjust the project files to sync up with
        http://trac.webkit.org/changeset/50259

        * WebCore.gypi: Renamed and added files.

2009-10-29  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Tor Arne Vestbø.

        [Qt] Implement DELETE HTTP method for XmlHttpRequest